--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.0.1",
     "react-world-flags": "^1.6.0",
+    "sweetalert2": "^11.17.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^5.0.3"
   },
